--- a/pom.xml
+++ b/pom.xml
@@ -1,16 +1,16 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>com.alyxferrari</groupId>
-  <artifactId>neo3d</artifactId>
-  <version>v1.0-alpha</version>
-  <name>NEO3D</name>
-  <description>A 3D engine written in Java as a successor to jse3d. Basically an easy-to-use OpenGL wrapper.</description>
-  <packaging>jar</packaging>
-  <url>https://github.com/alyxferrari/NEO3D</url>
-  <properties>
-  	<lwjgl.version>3.2.3</lwjgl.version>
-  </properties>
-  <profiles>
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>com.alyxferrari</groupId>
+	<artifactId>neo3d</artifactId>
+	<version>v1.0-alpha</version>
+	<name>NEO3D</name>
+	<description>A 3D engine written in Java as a successor to jse3d. Basically an easy-to-use OpenGL wrapper.</description>
+	<packaging>jar</packaging>
+	<url>https://github.com/alyxferrari/NEO3D</url>
+	<properties>
+		<lwjgl.version>3.2.3</lwjgl.version>
+	</properties>
+	<profiles>
 		<profile>
 			<id>lwjgl-natives-linux-amd64</id>
 			<activation>
@@ -48,7 +48,6 @@
 			</properties>
 		</profile>
 	</profiles>
-
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
@@ -116,18 +115,29 @@
 			<artifactId>lwjgl-stb</artifactId>
 			<classifier>${lwjgl.natives}</classifier>
 		</dependency>
+		<dependency>
+			<groupId>com.github.mokiat</groupId>
+			<artifactId>java-data-front</artifactId>
+			<version>v2.0.0</version>
+		</dependency>
 	</dependencies>
-  <build>
-    <sourceDirectory>src</sourceDirectory>
-    <plugins>
-      <plugin>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.8.1</version>
-        <configuration>
-          <source>1.8</source>
-          <target>1.8</target>
-        </configuration>
-      </plugin>
-    </plugins>
-  </build>
+	<repositories>
+		<repository>
+			<id>jitpack.io</id>
+			<url>https://jitpack.io</url>
+		</repository>
+	</repositories>
+	<build>
+		<sourceDirectory>src</sourceDirectory>
+		<plugins>
+			<plugin>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.8.1</version>
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 </project>
